# Amble

./: .clang-format  .gitignore  .qmlls.ini  Amble.code-workspace  CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
src/: CircuitViewport.cpp  CircuitViewport.h  main.cpp
